Bug 1228482 - Fix compile error with VS2015 and memory leak in nsEdgeReadingListExtractor. r=bas